add color constants to style

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+:root {  
+    --white: hsl(0,0%, 100%);
+    --light-gray: hsl(212, 45%, 89%);
+    --gray-blue: hsl(220, 15%, 55%);
+    --dark-blue: hsl(218, 44%, 22%);
+    
+}
+
+
 /*
 # Front-end Style Guide
 
@@ -7,13 +16,6 @@ The designs were created to the following widths:
 
 - Mobile: 375px
 - Desktop: 1440px
-
-## Colors
-
-- White: hsl(0, 0%, 100%)
-- Light gray: hsl(212, 45%, 89%)
-- Grayish blue: hsl(220, 15%, 55%)
-- Dark blue: hsl(218, 44%, 22%)
 
 ## Typography
 
@@ -25,3 +27,4 @@ The designs were created to the following widths:
 
 - Family: [Outfit](https://fonts.google.com/specimen/Outfit)
 - Weights: 400, 700 */
+
