--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,15 @@
     font-size: 15px;
 }
 body {
+   
     background-color: var(--light-gray);
 }
 .main-container {
-    
+    display: flex;
+    flex-direction: column;
     background-color: var(--white);
     width: 30vw;
+    height: 50vh;
 }
 
 .QR {
